# pda

./: README.rst  pyproject.toml
pda/: __init__.py  __main__.py  utils.py
pda/listdb/: __init__.py  config.py  github_issues.py
tests/: test_pda.py
